--- a/css/index.css
+++ b/css/index.css
@@ -714,6 +714,7 @@ header {
   border-radius: 15px;
   background: rgba(255, 255, 255, 0.1);
   overflow: hidden;
+  position: relative;
 }
 .catalog-item > * {
   width: calc(50% - 10px);
@@ -791,6 +792,9 @@ header {
   padding: 0.5rem 9px !important;
 }
 .catalog-item .btn-favorites {
+  position: absolute;
+  top: 10px;
+  right: 10px;
   width: 1.1rem;
   height: 1.1rem;
   background-image: url(../media/icons/heart-white.svg);
