--- a/scss/components/_catalog.scss
+++ b/scss/components/_catalog.scss
@@ -9,6 +9,7 @@
     border-radius: 15px;
     background: rgba($color-text-main, .1);
     overflow: hidden;
+    position: relative;
 
     >* {
         width: calc(50% - 10px);
@@ -84,6 +85,9 @@
     }
 
     .btn-favorites {
+        position: absolute;
+        top: 10px;
+        right: 10px;
         width: 1.1rem;
         height: 1.1rem;
         background-image: url(../media/icons/heart-white.svg);
