--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -48,9 +48,9 @@
 
         .btn-favorites {
             position: absolute;
-            top: 50%;
+            top: 1px;
             right: 0;
-            transform: translateY(-50%);
+            // transform: translateY(-50%);
             width: 1.5rem;
             height: 1.5rem;
             background-image: url(../media/icons/heart-white.svg);
