--- a/scss/components/_catalog.scss
+++ b/scss/components/_catalog.scss
@@ -88,11 +88,11 @@
         position: absolute;
         top: 10px;
         right: 10px;
-        width: 1.5rem;
-        height: 1.5rem;
+        width: 1.1rem;
+        height: 1.1rem;
         background-image: url(../media/icons/heart-white.svg);
         @include bg-style;
-        // transition: $transition;
+        transition: $transition;
 
         &.active {
             background-image: url(../media/icons/heart-active.svg);
