--- a/css/cart.css
+++ b/css/cart.css
@@ -998,7 +998,7 @@ header {
   right: 10px;
   width: 1.1rem;
   height: 1.1rem;
-  background-image: url(../../media/icons/delete.svg);
+  background-image: url(../media/icons/delete.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
