--- a/scss/components/_cart.scss
+++ b/scss/components/_cart.scss
@@ -59,7 +59,7 @@
         right: 10px;
         width: 1.1rem;
         height: 1.1rem;
-        background-image: url(../../media/icons/delete.svg);
+        background-image: url(../media/icons/delete.svg);
         @include bg-style;
         transition: $transition;
     }
