--- a/scss/components/_cart.scss
+++ b/scss/components/_cart.scss
@@ -55,12 +55,37 @@
 
     .btn-delete {
         position: absolute;
-        top: 10px;
-        right: 10px;
+        top: 2px;
+        right: 0;
         width: 1.1rem;
         height: 1.1rem;
         background-image: url(../media/icons/delete.svg);
         @include bg-style;
         transition: $transition;
+    }
+
+    &:not(:first-child) {
+        margin-top: 40px;
+    }
+}
+
+.cart-empty-wpapper {
+    // text-align: center;
+
+    &:not(.acitve) {
+        display: none;
+    }
+
+    .text {
+        font-size: 1.3rem;
+        padding-bottom: 20px;
+    }
+
+    .btn {
+        width: auto;
+        height: 40px;
+        line-height: 40px;
+        padding: 0 30px;
+        font-size: 1rem;
     }
 }
