--- a/scss/cart.scss
+++ b/scss/cart.scss
@@ -17,6 +17,9 @@ Theme Version:	1.0
 @import "base/header";
 
 // catalog
+@import "components/catalog";
+
+// card
 @import "components/card";
 
 //cart
