--- a/scss/components/_catalog.scss
+++ b/scss/components/_catalog.scss
@@ -80,7 +80,7 @@
 
         .btn {
             flex: 1;
-            padding: .5rem 9px !important;
+            // padding: .5rem 9px !important;
         }
     }
 
