--- a/css/card.css
+++ b/css/card.css
@@ -573,8 +573,10 @@ a {
 
 .btn {
   text-align: center;
-  font-size: 0.8rem;
-  padding: 5px 14px;
+  font-size: 1rem;
+  padding: 0 14px;
+  height: 40px;
+  line-height: 40px;
   border-radius: 20px;
   -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease;
@@ -616,6 +618,12 @@ h1,
   font-size: 1.8rem;
   line-height: 90%;
   color: #fff;
+  padding-bottom: 30px;
+}
+
+h2 {
+  font-weight: bold;
+  font-size: 1.2rem;
   padding-bottom: 30px;
 }
 
