--- a/css/cart.css
+++ b/css/cart.css
@@ -573,8 +573,10 @@ a {
 
 .btn {
   text-align: center;
-  font-size: 0.8rem;
-  padding: 5px 14px;
+  font-size: 1rem;
+  padding: 0 14px;
+  height: 40px;
+  line-height: 40px;
   border-radius: 20px;
   -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease;
@@ -616,6 +618,12 @@ h1,
   font-size: 1.8rem;
   line-height: 90%;
   color: #fff;
+  padding-bottom: 30px;
+}
+
+h2 {
+  font-weight: bold;
+  font-size: 1.2rem;
   padding-bottom: 30px;
 }
 
@@ -692,6 +700,119 @@ header {
   color: #000;
   font-family: "Open Sans";
   font-weight: bold;
+}
+
+.catalog-items {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  gap: 20px;
+}
+
+.catalog-item {
+  gap: 20px;
+  width: 100%;
+  border-radius: 15px;
+  background: rgba(255, 255, 255, 0.1);
+  overflow: hidden;
+  position: relative;
+}
+.catalog-item > * {
+  width: calc(50% - 10px);
+}
+.catalog-item .img-wrapper {
+  overflow: hidden;
+  border-radius: 15px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.catalog-item .img-wrapper img {
+  width: 100%;
+}
+.catalog-item .descript {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  padding: 20px 0;
+  padding-right: 15px;
+}
+.catalog-item .descript .item-name {
+  font-size: 1.2rem;
+  line-height: 112%;
+  padding-bottom: 10px;
+  font-weight: 500;
+}
+.catalog-item .descript .item-price {
+  margin-top: auto;
+  width: 100%;
+  text-align: right;
+  font-size: 1.2rem;
+  font-family: "Open Sans";
+  font-weight: 500;
+}
+.catalog-item .descript .list {
+  width: 100%;
+  margin-bottom: 25px;
+}
+.catalog-item .descript .list li {
+  font-size: 0.9rem;
+  position: relative;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+}
+.catalog-item .descript .list li:before {
+  content: attr(data-before);
+  position: relative;
+  opacity: 0.8;
+}
+.catalog-item .descript .list li:not(:first-child) {
+  margin-top: 5px;
+}
+.catalog-item .btns-wrapper {
+  margin-top: 15px;
+  gap: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+.catalog-item .btns-wrapper .btn {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+.catalog-item .btn-favorites {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 1.1rem;
+  height: 1.1rem;
+  background-image: url(../media/icons/heart-white.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+.catalog-item .btn-favorites.active {
+  background-image: url(../media/icons/heart-active.svg);
 }
 
 .card .slider-wrapper {
@@ -1004,6 +1125,7 @@ header {
   background-size: cover;
   -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease;
+  background-size: contain;
 }
 .cart-item:not(:first-child) {
   margin-top: 40px;
@@ -1018,8 +1140,32 @@ header {
 }
 .cart-empty-wpapper .btn {
   width: auto;
-  height: 40px;
-  line-height: 40px;
+  height: 35px;
+  line-height: 35px;
   padding: 0 30px;
   font-size: 1rem;
+}
+
+.last-views-wrapper {
+  margin-top: 40px;
+  padding-top: 30px;
+  position: relative;
+}
+.last-views-wrapper:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: calc(100% + 20px);
+  height: 1px;
+  background: rgba(255, 255, 255, 0.2);
+}
+.last-views-wrapper h2 {
+  padding-bottom: 0;
+}
+.last-views-wrapper .btn {
+  height: 35px;
+  line-height: 35px;
 }/*# sourceMappingURL=cart.css.map */
