--- a/css/favorites.css
+++ b/css/favorites.css
@@ -1,5 +1,5 @@
 /*
-Name: 			cart.css
+Name: 			index.css
 Written by: 	Lavrinenko Aleksandr
 Theme Version:	1.0
 */
@@ -815,308 +815,10 @@ header {
   background-image: url(../media/icons/heart-active.svg);
 }
 
-.card .slider-wrapper {
-  display: block;
-  white-space: nowrap;
-  overflow: auto;
-  margin: 0 -10px;
-  width: calc(100% + 20px);
-  padding: 0 10px;
-  padding-bottom: 10px;
-}
-.card .slider-card {
-  height: 60vw;
-  width: 50vw;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  display: inline-block;
-  border-radius: 10px;
-  overflow: hidden;
-  position: relative;
-}
-.card .slider-card:after {
-  content: "";
+.favorites .btn-delete {
   position: absolute;
-  bottom: 10px;
+  top: 10px;
   right: 10px;
-  width: 30px;
-  height: 30px;
-  border-radius: 5px;
-  background: rgba(0, 0, 0, 0.5);
-  background-image: url(../media/icons/zoom.svg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-size: 15px;
-}
-.card .slider-card + .slider-card {
-  margin-left: 10px;
-}
-.card .price-card {
-  font-family: "Open Sans";
-  font-size: 1.4rem;
-  font-weight: bold;
-  margin-top: 20px;
-  position: relative;
-}
-.card .price-card .btn-favorites {
-  position: absolute;
-  top: 50%;
-  right: 0;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  width: 1.1rem;
-  height: 1.1rem;
-  background-image: url(../media/icons/heart-white.svg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-transition: all 0.4s ease;
-  transition: all 0.4s ease;
-}
-.card .price-card .btn-favorites.active {
-  background-image: url(../media/icons/heart-active.svg);
-}
-.card .descript-card {
-  margin: 30px 0;
-  padding: 20px 0;
-  position: relative;
-}
-.card .descript-card:before, .card .descript-card:after {
-  content: "";
-  position: absolute;
-  width: calc(100% + 20px);
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  height: 1px;
-  background: rgba(255, 255, 255, 0.3);
-}
-.card .descript-card:before {
-  top: 0;
-}
-.card .descript-card:after {
-  bottom: 0;
-}
-.card .descript-card .text {
-  line-height: 180%;
-  font-size: 0.9rem;
-}
-.card .options-card .list {
-  gap: 30px;
-}
-.card .options-card li {
-  position: relative;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  gap: 5px;
-  font-size: 0.9rem;
-}
-.card .options-card li:before {
-  content: attr(data-before);
-  position: relative;
-  font-size: 0.8rem;
-  opacity: 0.8;
-}
-.card .title {
-  font-family: "Open Sans";
-  font-weight: bold;
-  font-size: 1.2rem;
-  padding-bottom: 15px;
-}
-.card .added-card {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  gap: 15px;
-  margin-top: 80px;
-}
-.card .added-card .count-wrapper {
-  position: relative;
-  min-width: 60%;
-}
-.card .added-card .count-wrapper .title {
-  font-family: "HelveticaNeueCyr";
-  font-size: 0.8rem;
-  font-weight: normal;
-  padding-bottom: 5px;
-  opacity: 0.8;
-  text-align: center;
-  position: absolute;
-  bottom: 100%;
-  left: 0;
-  margin-bottom: 5px;
-  white-space: nowrap;
-}
-.card .added-card .added-card_top {
-  width: 100%;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-.card .added-card .count-wrapper_inner {
-  padding: 5px 20px;
-  border-radius: 50px;
-  -webkit-box-shadow: inset 0 0 68px 0 rgba(255, 255, 255, 0.05), inset 0 0 4px 0 rgba(255, 255, 255, 0.15);
-          box-shadow: inset 0 0 68px 0 rgba(255, 255, 255, 0.05), inset 0 0 4px 0 rgba(255, 255, 255, 0.15);
-  background: rgba(255, 255, 255, 0.05);
-  gap: 15px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  position: relative;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-.card .added-card .count-wrapper_inner .count {
-  width: 50px;
-  text-align: center;
-}
-.card .added-card .count-wrapper_inner .control {
-  width: 30px;
-  height: 30px;
-  position: relative;
-}
-.card .added-card .count-wrapper_inner .control.--min:before, .card .added-card .count-wrapper_inner .control.--plus:before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  width: 15px;
-  height: 2px;
-  background: #FFFFFF;
-}
-.card .added-card .count-wrapper_inner .control.--plus:after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  width: 2px;
-  height: 15px;
-  background: #FFFFFF;
-}
-.card .added-card .finally-price {
-  font-size: 1.2rem;
-  font-weight: bold;
-  font-family: "Open Sans";
-  position: relative;
-}
-.card .added-card .finally-price .old-price {
-  position: absolute;
-  bottom: 100%;
-  right: 0;
-  font-family: "HelveticaNeueCyr";
-  font-weight: normal;
-  margin-bottom: 2px;
-  font-size: 0.9rem;
-  color: rgba(255, 255, 255, 0.7);
-}
-.card .added-card .finally-price .old-price:after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  left: 0;
-  width: 100%;
-  height: 1px;
-  background: rgba(255, 255, 255, 0.7);
-}
-.card .added-card .btn-added {
-  -webkit-box-shadow: inset 0 0 68px 0 rgba(255, 255, 255, 0.05), inset 0 0 4px 0 rgba(255, 255, 255, 0.15);
-          box-shadow: inset 0 0 68px 0 rgba(255, 255, 255, 0.05), inset 0 0 4px 0 rgba(255, 255, 255, 0.15);
-  background: rgba(255, 255, 255, 0.05);
-  padding: 0 15px;
-  border-radius: 50px;
-  width: 100%;
-  font-size: 1rem;
-  height: 40px;
-  line-height: 40px;
-}
-.card .added-card .btn-added.active {
-  background: #1E2083;
-  -webkit-box-shadow: inset 0 0 4px 0 rgba(255, 255, 255, 0.1);
-          box-shadow: inset 0 0 4px 0 rgba(255, 255, 255, 0.1);
-  color: #FFFFFF;
-}
-.card .added-card .btn-added.active:active {
-  -webkit-box-shadow: inset 0 0 4px 0 rgba(255, 255, 255, 0.5);
-          box-shadow: inset 0 0 4px 0 rgba(255, 255, 255, 0.5);
-}
-
-.cart-item {
-  gap: 15px;
-  position: relative;
-}
-.cart-item .img-wrapper {
-  width: 30vw;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center top;
-  border-radius: 10px;
-  overflow: hidden;
-}
-.cart-item .descript {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  margin-left: auto;
-}
-.cart-item .descript > .title {
-  width: 100%;
-  padding-bottom: 0;
-}
-.cart-item .descript .added-card {
-  margin-top: 40px;
-  width: 100%;
-}
-.cart-item .descript .added-card .count-wrapper {
-  width: auto;
-  min-width: auto;
-}
-.cart-item .descript .added-card .count-wrapper_inner {
-  padding: 3px 10px;
-  gap: 5px;
-}
-.cart-item .descript .added-card .count-wrapper_inner .control {
-  width: 20px;
-}
-.cart-item .descript .added-card .count-wrapper_inner .count {
-  width: 30px;
-}
-.cart-item .descript .added-card .btn-added {
-  height: 35px;
-  line-height: 35px;
-}
-.cart-item .btn-delete {
-  position: absolute;
-  top: 2px;
-  right: 0;
   width: 1.1rem;
   height: 1.1rem;
   background-image: url(../media/icons/delete.svg);
@@ -1127,17 +829,13 @@ header {
   transition: all 0.4s ease;
   background-size: contain;
 }
-.cart-item:not(:first-child) {
-  margin-top: 40px;
-}
 
-.cart-empty-wpapper:not(.active) {
+.cart-empty-wpapper:not(.acitve) {
   display: none;
 }
 .cart-empty-wpapper .text {
   font-size: 1.3rem;
   padding-bottom: 20px;
-  line-height: 150%;
 }
 .cart-empty-wpapper .btn {
   width: auto;
@@ -1147,26 +845,18 @@ header {
   font-size: 1rem;
 }
 
-.last-views-wrapper {
-  margin-top: 40px;
-  padding-top: 30px;
-  position: relative;
+.favorites-empty-wpapper:not(.active) {
+  display: none;
 }
-.last-views-wrapper:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  width: calc(100% + 20px);
-  height: 1px;
-  background: rgba(255, 255, 255, 0.2);
+.favorites-empty-wpapper .text {
+  font-size: 1.3rem;
+  padding-bottom: 20px;
+  line-height: 150%;
 }
-.last-views-wrapper h2 {
-  padding-bottom: 0;
-}
-.last-views-wrapper .btn {
+.favorites-empty-wpapper .btn {
+  width: auto;
   height: 35px;
   line-height: 35px;
-}/*# sourceMappingURL=cart.css.map */
+  padding: 0 30px;
+  font-size: 1rem;
+}/*# sourceMappingURL=favorites.css.map */
