--- a/scss/components/_cart.scss
+++ b/scss/components/_cart.scss
@@ -73,13 +73,14 @@
 .cart-empty-wpapper {
     // text-align: center;
 
-    &:not(.acitve) {
+    &:not(.active) {
         display: none;
     }
 
     .text {
         font-size: 1.3rem;
         padding-bottom: 20px;
+        line-height: 150%;
     }
 
     .btn {
