--- a/scss/components/_profile.scss
+++ b/scss/components/_profile.scss
@@ -11,7 +11,7 @@
     .profile-item {
         position: relative;
         font-weight: 500;
-        font-size: .8rem;
+        font-size: 1rem;
         padding: 20px 0;
         padding-left: 40px;
         width: 100%;
@@ -70,7 +70,6 @@
             }
         }
     }
-<<<<<<< HEAD
 }
 
 
@@ -78,6 +77,4 @@
     .profile-item:before {
         margin-top: -2px;
     }
-=======
->>>>>>> 7dede4e177598434ce1323507516e27ac5ca58f2
 }
