--- a/css/cart.css
+++ b/css/cart.css
@@ -639,6 +639,20 @@ input[type=checkbox] {
   }
 }
 
+.tg-elem {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  gap: 10px;
+}
+
 header {
   position: fixed;
   bottom: 0;
